--- a/doc/theory.tex
+++ b/doc/theory.tex
@@ -180,6 +180,11 @@ Next, let's calculate $\chi_{EQ}$. We do similar steps above, except set $\delta
 \end{align*}
 
 \subsection{The speed of sound}
+When taking partial derivatives, assume functions are of $T$ and $\tilde{\mu}_a\equiv\mu_a/T$.
+\begin{align*}\eqnumber
+c_s^2&=\left.\frac{\partial P}{\partial\epsilon}\right_|_{s/\rho},\\
+\delta P&=\frac{\partial P}{\partial T}\delta T+\frac{\partial P}{\partial\tilde{\mu}_a}\delta\tilde{\mu}_a,\\\delta \epsilon&=\frac{\partial\epsilon}{\partial T}\delta T+\frac{\partial\epsilon}{\partial\tilde{\mu}_a}\delta\tilde{\mu}_a,\\
+\end{align*}
 
 
 \end{document}
