--- a/doc/theory.tex
+++ b/doc/theory.tex
@@ -229,7 +229,7 @@ Now, let's summarize the results for the speed of sound using the following defi
 This gives
 \begin{align*}\eqnumber
 c_s^2&=\frac{(P+\epsilon)/T+\rho_a M_a}{\xi+\zeta_aM_a},\\
-M_a&=A^{-1}_ab(\xi\rho_b-s\zeta_b),\\
+M_a&=A^{-1}_{ab}(\xi\rho_b-s\zeta_b),\\
 A_{ab}&=s\chi_{ab}-\rho_a\zeta_b.
 \end{align*}
 
