--- a/doc/theory.tex
+++ b/doc/theory.tex
@@ -241,7 +241,7 @@ Next, substitute for derivative of $s$, so that all derivatives are related to f
 \frac{\partial\epsilon}{\partial\tilde{\mu}_a}-\tilde{\mu}_bT\frac{\partial\rho_b}{\partial\tilde{\mu}_a}
 \right)m\\
 M_a&=A^{-1}_{ab}\left(
-\rho_b\frac{\partial\epsilon}{\partial T}-Ts\frac{\partial\rho_b}{\partial T}\right),\\
+\rho_b \frac{\partial\epsilon}{\partial T} XX -\rho_bT\tilde{\mu}_c\frac{\partial\rho_c}{\partial T} XX-Ts\frac{\partial\rho_b}{\partial T}\right),\\
 A_{ab}&=s\chi_{ab}-\rho_a\left(
 \frac{1}{T}\frac{\partial\epsilon}{\partial\tilde{\mu}_b}-\tilde{\mu}_c\frac{\partial\rho_c}{\partial\tilde{\mu}_b}
 \right)\\
@@ -257,7 +257,7 @@ Now, let's summarize the results for the speed of sound using the following defi
 This gives
 \begin{align*}\eqnumber\label{eq:f12}
 c_s^2&=\frac{(P+\epsilon)/T+\rho_a M_a}{\xi+\zeta_aM_a},\\
-M_a&=A^{-1}_{ab}(\xi\rho_b-s\zeta_b),\\
+M_a&=A^{-1}_{ab}[(\xi-\tilde{\mu}_c\zeta_c)\rho_b-s\zeta_b],\\
 A_{ab}&=s\chi_{ab}-\rho_a\zeta_b.
 \end{align*}
 
