--- a/doc/theory.tex
+++ b/doc/theory.tex
@@ -216,7 +216,7 @@ c_s^2&=\left.\frac{\partial P}{\partial\epsilon}\right|_{s/\rho},\\
 \delta\rho_a&=\frac{\partial \rho_a}{\partial T}\delta T+\frac{\partial \rho_a}{\partial\tilde{\mu}_b}\delta\tilde{\mu}_b\\
 &=\frac{\partial \rho_a}{\partial T}\delta T+\chi_{ab}\delta\tilde{\mu}_b,\\
 \delta s&=\frac{\partial s}{\partial T}\delta T+\frac{\partial s}{\partial\tilde{\mu}_a}\delta\tilde{\mu}_a,\\
-s^2\delta\left(\frac{\delta\rho_a}{s}\right)&=s\delta\rho_a-\rho_a\delta s=0,\\
+s^2\delta\left(\frac{\rho_a}{s}\right)&=s\delta\rho_a-\rho_a\delta s=0,\\
 0&=s\frac{\partial\rho_a}{\partial T}\delta T+s\chi_{ab}\delta\tilde{\mu}_b
 -\rho_b\frac{\partial s}{\partial T}\delta T-\rho_a\frac{\partial s}{\partial\tilde{\mu}_b}\delta\tilde{\mu}_b,\\
 \delta\tilde{\mu}_a&=M_a\frac{\delta T}{T},\\
