--- a/doc/theory.tex
+++ b/doc/theory.tex
@@ -237,7 +237,7 @@ This then gives
 &=\left.\frac{\partial\epsilon}{\partial T}\right|_{\vec{\tilde{\mu}}}-\zeta_a\chi^{-1}_{ab}\zeta_b.
 \end{align*}
 
-For our calculation, we have two components, that of a non-interacting gas, plus an interaction. The thermodynamics of the non-interactiong gas are most easily expressed in terms of chemical potentials, whereas the interaction term is most easily expressed in terms of densities. To add quantities together, we assume that the net free energy is the sum of the free energy of gas and interaction part,
+For our calculation, we have two components, that of a non-interacting gas, plus an interaction. The thermodynamics of the non-interactiong gas are most easily expressed in terms of chemical potentials, whereas the interaction term is most easily expressed in terms of densities. To add quantities together, we assume that the net free energy is the sum of the free energy of a gas and the interaction part,
 \begin{align*}\eqnumber
 f&=f^{\rm(gas)}+f^{\rm(int)}.
 \end{align*}
